fix(section-title): icon alignment

--- a/src/less/section-title/section-title.less
+++ b/src/less/section-title/section-title.less
@@ -31,7 +31,9 @@
 }
 
 .section-title__info {
+    bottom: -3px;
     margin: 0 @spacing-300 0 @spacing-100;
+    position: relative;
 }
 
 .section-title__overflow {
